--- a/package.json
+++ b/package.json
@@ -19,7 +19,14 @@
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
+    "@fortawesome/angular-fontawesome": "^0.7.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@sweetalert2/ngx-sweetalert2": "^9.0.0",
+    "bootstrap": "4.1.1",
+    "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.5.5",
+    "sweetalert2": "^10.13.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
