--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "e2e": "ng e2e"
   },
   "private": true,
+  "license": "MIT",
   "dependencies": {
     "@angular/animations": "~10.0.6",
     "@angular/common": "~10.0.6",
